# telebot-pb

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  agent_client.py  auto_update.sh  bot_bus.py  main.py  mcp_server.py  pyproject.toml  start.sh
.github/workflows/: sync-public.yml  tests.yml
prompts/default_bot/: bot_prompts.yaml  system_prompt.yaml
tests/: test_active_hours.py  test_agent_client.py  test_bot_bus.py  test_claiming.py  test_dialogue.py  test_extract_json_image.py  test_extract_voice_file.py  test_handle_photo.py  test_history.py  test_image_functions.py  test_mcp_server.py  test_nudge.py  test_send_nudge_with_image.py  test_utils.py  test_validate_env.py
